Update to require-javadoc 2.0.0